--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.socialgrub">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialGrub">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".ViewPost" />
         <activity android:name=".CreatePost" />
         <activity android:name=".ExploreActivity" />
