--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     //espressso
@@ -48,4 +49,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation "com.hendraanggrian.appcompat:socialview:0.2"
+
+    // auto-complete hashtag and mention
+    implementation "com.hendraanggrian.appcompat:socialview-commons:0.2"
 }
+
