Nick Thiemann 3/5/21  9:44 PM - updated Recipe class to implement Parcelable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".ViewPost" />
         <activity android:name=".CreatePost" />
+        <activity android:name=".AddDirections" />
+        <activity android:name=".AddTags" />
         <activity android:name=".ExploreActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ProfileActivity" />
