--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+
+
+
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
@@ -44,9 +49,15 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
+
+
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //espressso
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
 
     //androidx.test
