--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialGrub">
-        <activity android:name=".Search"></activity>
+        <activity android:name=".FinalConfirmPost"></activity>
+        <activity android:name=".AdditionalIngredients" />
+        <activity android:name=".AdditionalDirections" />
+        <activity android:name=".Search" />
         <activity android:name=".ConfirmPost" />
         <activity android:name=".AddIngredients" />
         <activity android:name=".EditProfileActivity" />
