Nick Thiemann 3/20/21 11:36 PM -Created Explore Page Search (filters by recipe name, user, or tags) -Added loading spinners to Search and Explore

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity android:name=".FinalConfirmPost"></activity>
         <activity android:name=".AdditionalIngredients" />
         <activity android:name=".AdditionalDirections" />
-        <activity android:name=".Search" />
+        <activity android:name=".Search"
+            />
+
         <activity android:name=".ConfirmPost" />
         <activity android:name=".AddIngredients" />
         <activity android:name=".EditProfileActivity" />
@@ -28,7 +30,12 @@
         <activity android:name=".CreatePost" />
         <activity android:name=".AddDirections" />
         <activity android:name=".AddTags" />
-        <activity android:name=".ExploreActivity" />
+        <activity android:name=".ExploreActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".RegisterActivity" />
