--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialGrub">
-        <activity android:name=".FinalConfirmPost"></activity>
+        <activity android:name=".DisplayIngredientAndDirections"></activity>
+        <activity android:name=".FinalConfirmPost" />
         <activity android:name=".AdditionalIngredients" />
         <activity android:name=".AdditionalDirections" />
-        <activity android:name=".Search"
-            />
-
+        <activity android:name=".Search" />
         <activity android:name=".ConfirmPost" />
         <activity android:name=".AddIngredients" />
         <activity android:name=".EditProfileActivity" />
@@ -30,7 +29,8 @@
         <activity android:name=".CreatePost" />
         <activity android:name=".AddDirections" />
         <activity android:name=".AddTags" />
-        <activity android:name=".ExploreActivity"
+        <activity
+            android:name=".ExploreActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
